# freidok-cli

./: LICENSE  README.md  pyproject.toml
codegen/: generate-models.py
codegen/schemata/: schema_publications.json
freidok/: cli.py  client.py  export.py  format.py  modify.py  utils.py  version.py
freidok/cli/: options.py  run.py
freidok/models/: api.py  institutions.py  publications.py
freidok/resources/: freidok_schema_edited.json
freidok/templates/: simple-list.html  simple-list.md
freidok/templates/institutions/: simple-list.html  simple-list.md
freidok_cli/: client.py  export.py  modify.py  version.py
freidok_cli/cli/: options.py  run.py
freidok_cli/models/: base.py  institutions.py  publications.py
freidok_cli/templates/publications/: simple-list.html  simple-list.md
freidok_cli/tools/: push_to_plone.py
