[tool.poetry]
name = "freidok"
version = "0.0.0"
description = "Retrieve publications from freidok and export via Jinja2 templates"
authors = ["Alexander Haupt <alexander.haupt@physiologie.uni-freiburg.de>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "3.10.*"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
lxml = "^4.9.2"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
freidok = 'freidok.cli:run'

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.17.0"}
black = "^23.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = "true"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/version.py"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.py$'
extend-exclude = '/models/'
