[tool.poetry]
name = "freidok-cli"
version = "1.0.0"
description = "A command-line client for FreiDok, the publication platform of the University of Freiburg"
authors = ["Alexander Haupt <alexander.haupt@physiologie.uni-freiburg.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/phys2/freidok-cli"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.4"
lxml = "^4.9.2"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
freidok = "freidok_cli.cli.run:main"
push-to-plone = "freidok_cli.tools.push_to_plone:main"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.17.0"}
black = "^23.1.0"
bumpver = "^2022.1120"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.py$'
extend-exclude = '/models/'

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{pep440_version}"$',
    '^current_version = "{version}"$',
]
"freidok/version.py" = [
    '^__version__ = "{pep440_version}"$',
]
